--- a/src/main/resources/templates/tasks.html
+++ b/src/main/resources/templates/tasks.html
@@ -3,24 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>Todo App</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 <body>
-    <h1>Todo Application</h1>
-
-<div>
-    <form action="/" method="post">
-        <div>
-            <input type="text" name="title" placeholder="Add a new todo..." required>
+<div class="container">
+    <h1 class="mt-5 text-center">Todo Application</h1>
+    <form action="/" method="post" class="row mt-3">
+        <div class="col-md-10">
+            <input class="form-control form-control-lg" type="text" name="title" placeholder="Add a new todo..." required>
         </div>
-        <div>
-            <button type="submit">Add</button>
+        <div class="col-md-2">
+            <button type="submit" class="btn btn-primary btn-lg btn-block">Add</button>
         </div>
     </form>
-    <th:block th:each="task : ${tasks}">
-        <div>
-            <span th:text="${task.title}">Task Title</span>
-        </div>
-    </th:block>
+    <div class="mt-4">
+        <th:block th:each="task : ${tasks}">
+            <div class="card mb-2">
+                <div class="card-body d-flex justify-content-between align-items-center">
+                    <span th:text="${task.title}">Task Title</span>
+                </div>
+            </div>
+        </th:block>
+    </div>
 </div>
 
 </body>
