--- a/src/main/resources/templates/tasks.html
+++ b/src/main/resources/templates/tasks.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <title>Todo App</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <style>
+       .text-strikethrough {
+        text-decoration: line-through;
+        color: grey;
+        }
+    </style>
 </head>
 <body>
 <div class="container">
     <h1 class="mt-5 text-center">Todo Application</h1>
     <form action="/" method="post" class="row mt-3">
         <div class="col-md-10">
-            <input class="form-control form-control-lg" type="text" name="title" placeholder="Add a new todo..." required>
+            <input class="form-control form-control-lg" type="text" name="title" placeholder="Add a new task..." required>
         </div>
         <div class="col-md-2">
             <button type="submit" class="btn btn-primary btn-lg btn-block">Add</button>
@@ -20,7 +26,11 @@
         <th:block th:each="task : ${tasks}">
             <div class="card mb-2">
                 <div class="card-body d-flex justify-content-between align-items-center">
-                    <span th:text="${task.title}">Task Title</span>
+                    <span th:classappend="${task.completed} ? 'text-strikethrough'" th:text="${task.title}">Task Title</span>
+                    <div>
+                        <a th:href="@{/{id}/toggle(id=${task.id})}" class="btn btn-outline-secondary btn-sm">Toggle</a>
+                        <a th:href="@{/{id}/delete(id=${task.id})}" class="btn btn-outline-danger btn-sm lm-2">Delete</a>
+                    </div>
                 </div>
             </div>
         </th:block>
